# gforth_kernel

./: README.md  hatch_build.py  pyproject.toml  server.f
gforth_kernel/: __init__.py  __main__.py  install.py  kernel.py
